--- a/src/components/header.css
+++ b/src/components/header.css
@@ -8,7 +8,7 @@
   left: 50%;
   transform: translateX(-50%);
   width: calc(100% - 40px);
-  background-color: rgb(230, 239, 247);
+  background-color: rgba(253, 254, 255);
   height: 65px;
   display: flex;
   justify-content: center;
@@ -17,8 +17,8 @@
 
   /* Rounded border + lifted look */
   border-radius: 15px;
-  box-shadow: 0 6px 18px rgba(63, 42, 82, 0.25);
-  border: 1px solid rgba(63, 42, 82, 0.15);
+  box-shadow: 0 6px 18px rgba(231, 144, 121, 0.25);
+  border: 1px solid rgba(231, 144, 121, 0.15);
   transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
@@ -39,7 +39,7 @@
 }
 
 .nav_link {
-  color: rgb(63, 42, 82);
+  color: rgb(231, 144, 121);
   font-family: 'Playfair Display', serif;
   font-weight: 700;
   font-size: 1.15rem; 
@@ -57,23 +57,23 @@
   transform: translateX(-50%); 
   width: 0%;
   height: 3px;
-  background-color: rgb(190, 174, 219);
+  background-color: rgb(255, 248, 245);
   transition: width 0.4s ease-out;
 }
 
 .nav_link:hover {
-  color: rgb(190, 174, 219);
+  color: rgb(248, 234, 231);
 }
 
 .nav_link:hover::after {
   width: 100%;
-  background-color: rgb(190, 174, 219); 
+  background-color: rgb(255, 248, 245); 
 }
 
 /* ---------------------------------Button (Pill-Shaped) ---------------------------------------------*/
 .resume_btn {
-  background-color:  rgb(63, 42, 82);
-  color:  rgba(238, 232, 221); 
+  background-color:  rgb(231, 144, 121);
+  color:  rgb(255, 248, 245); 
   font-family: 'Cormorant Garamond', serif;
   font-weight: 600;
   padding: 0.7rem 1.8rem; 
@@ -85,10 +85,10 @@
 }
 
 .resume_btn:hover {
-  background-color:  rgb(230, 239, 247); 
-  color: rgb(63, 42, 82); 
-  border: 3px solid rgb(63, 42, 82); 
-  box-shadow: 0 6px 15px rgba(63, 42, 82, 0.2);
+  background-color:  rgba(253, 254, 255); 
+  color: rgb(231, 144, 121); 
+  border: 3px solid rgb(231, 144, 121); 
+  box-shadow: 0 6px 15px rgba(231, 144, 121, 0.2);
 }
 
 /* Responsive */
