--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -256,10 +256,27 @@ html, body {
 }
 
 .project_card .skills span:hover {
-  background-color: var(--color-deep-berry); /* NEW: Dark background on hover */
-  color: var(--color-off-white); /* NEW: White text on hover */
-  border: none; /* Removed border */
+  background-color: var(--color-deep-berry); 
+  color: var(--color-off-white);
+  border: none; 
 }
+
+.project_card img {
+  width: 100%;     
+  height: 200px;    
+  object-fit: cover; 
+  border-radius: 10px; 
+  margin-bottom: 1.5rem; 
+  transition: transform 0.3s ease;
+    border: 1px solid rgba(74, 32, 48, 0.2); 
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08); 
+  
+}
+
+.project_card:hover img {
+  transform: scale(1.02); 
+}
+
 
 
 
